--- a/MyAssignment/web/view/teacher/checkattend.html
+++ b/MyAssignment/web/view/teacher/checkattend.html
@@ -37,7 +37,7 @@
                                 <td>HE150878</td>
                                 <td>Nguyễn Đình Trường</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" value="HE150321"></d>
+                                <td><input type="radio" value="HE150321" name="1">Present<input type="radio" value="HE150321" name="1">Absent</td>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -49,7 +49,7 @@
                                 <td>HE151247</td>
                                 <td>Nguyễn Ngọc Đức</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE161270"></d>
+                                <td><input type="radio" value="HE161270" name="2">Present<input type="radio" value="" name="2">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -61,7 +61,7 @@
                                 <td>HE153444</td>
                                 <td>Lê Ngọc Sơn</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE163452"></d>
+                                <td><input type="radio" value="HE163452" name="3">Present<input type="radio" value="" name="3">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -74,7 +74,7 @@
                                 <td>HE160919</td>
                                 <td>Nguyễn Trường Huy</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE158462"></d>
+                                <td><input type="radio" value="HE158462" name="4">Present<input type="radio" value="" name="4">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -86,7 +86,7 @@
                                 <td>HE161488</td>
                                 <td>Tạ Văn Chỉnh</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE154632"></d>
+                                <td><input type="radio" value="HE154632" name="5">Present<input type="radio" value="" name="5">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -98,7 +98,7 @@
                                 <td>HE161491</td>
                                 <td>Vũ Đức Phong</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE146246"></d>
+                                <td><input type="radio" value="HE146246" name="6">Present<input type="radio" value="" name="6">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -110,7 +110,7 @@
                                 <td>HE161515</td>
                                 <td>Nguyễn Văn Vượng</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE158493"></d>
+                                <td><input type="radio" value="HE158493" name="7">Present<input type="radio" value="" name="7">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -122,7 +122,7 @@
                                 <td>HE161578</td>
                                 <td>Phạm Đức Anh</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE153583"></d>
+                                <td><input type="radio" value="HE153583" name="8">Present<input type="radio" value="" name="8">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -134,7 +134,7 @@
                                 <td>HE161586</td>
                                 <td>Vũ Xuân Trường</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE153716"></d>
+                                <td><input type="radio" value="HE153716" name="9">Present<input type="radio" value="" name="9">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -146,7 +146,7 @@
                                 <td>HE161624</td>
                                 <td>Vũ Văn Hoàng</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE158493"></d>
+                                <td><input type="radio" value="HE158493" name="10">Present<input type="radio" value="" name="10">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -158,7 +158,7 @@
                                 <td>HE161651</td>
                                 <td>Kiều Trí Quyền</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE158493"></d>
+                                <td><input type="radio" value="HE158493" name="11">Present<input type="radio" value="" name="11">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -170,7 +170,7 @@
                                 <td>HE161657</td>
                                 <td>Lê Ngọc Tuấn Minh</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE160250"></d>
+                                <td><input type="radio" value="HE160250" name="12">Present<input type="radio" value="" name="12">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -182,7 +182,7 @@
                                 <td>HE161693</td>
                                 <td>Phạm Xuân Nam</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE158493"></d>
+                                <td><input type="radio" value="HE158493" name="13">Present<input type="radio" value="" name="13">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -194,7 +194,7 @@
                                 <td>HE161703</td>
                                 <td>Nguyễn Hải Đăng</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE160384"></d>
+                                <td><input type="radio" value="HE160384" name="14">Present<input type="radio" value="" name="14">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -206,7 +206,7 @@
                                 <td>HE161766</td>
                                 <td>Nguyễn Tố Anh</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE160385"></d>
+                                <td><input type="radio" value="HE160385" name="15">Present<input type="radio" value="" name="15">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -218,7 +218,7 @@
                                 <td>HE161786</td>
                                 <td>Tạ Văn Bách</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE151136"></d>
+                                <td><input type="radio" value="HE151136" name="16">Present<input type="radio" value="" name="16">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -230,7 +230,7 @@
                                 <td>HE161864</td>
                                 <td>Đỗ Tiến Thành</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE151313"></d>
+                                <td><input type="radio" value="HE151313" name="17">Present<input type="radio" value="" name="17">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -242,7 +242,7 @@
                                 <td>HE161893</td>
                                 <td>Chử Hữu Thành</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE155672"></d>
+                                <td><input type="radio" value="HE155672" name="18">Present<input type="radio" value="" name="18">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -254,7 +254,7 @@
                                 <td>HE161925</td>
                                 <td>Trần Đình Lực</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE142342"></d>
+                                <td><input type="radio" value="HE142342" name="19">Present<input type="radio" value="" name="19">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -266,7 +266,7 @@
                                 <td>HE163314</td>
                                 <td>Phạm Anh Thương</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE143232"></d>
+                                <td><input type="radio" value="HE143232" name="20">Present<input type="radio" value="" name="20">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -278,7 +278,7 @@
                                 <td>HE163672</td>
                                 <td>Nguyễn Thị Hải Nhi</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE150138"></d>
+                                <td><input type="radio" value="HE150138" name="21">Present<input type="radio" value="" name="21">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -290,7 +290,7 @@
                                 <td>HE163676</td>
                                 <td>Lê Trung Anh</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE150224"></d>
+                                <td><input type="radio" value="HE150224" name="22">Present<input type="radio" value="" name="22">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -302,7 +302,7 @@
                                 <td>HE163810</td>
                                 <td>Lê Trần Tiến Đông</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE150333"></d>
+                                <td><input type="radio" value="HE150333" name="23">Present<input type="radio" value="" name="23">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -314,7 +314,7 @@
                                 <td>HE163825</td>
                                 <td>Nguyễn Tiến Quân</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE150375"></d>
+                                <td><input type="radio" value="HE150375" name="24">Present<input type="radio" value="" name="24">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -326,7 +326,7 @@
                                 <td>HE163825</td>
                                 <td>Phạm Công Chí</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE143552"></d>
+                                <td><input type="radio" value="HE143552" name="25">Present<input type="radio" value="" name="25">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -338,7 +338,7 @@
                                 <td>HE163830</td>
                                 <td>Cao Thế Trung</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE143552"></d>
+                                <td><input type="radio" value="HE143552" name="26">Present<input type="radio" value="" name="26">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -350,7 +350,7 @@
                                 <td>HE163940</td>
                                 <td>Đỗ Duy Mạnh</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE143552"></d>
+                                <td><input type="radio" value="HE143552" name="27">Present<input type="radio" value="" name="27">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -363,7 +363,7 @@
                                 <td>HE163953</td>
                                 <td>Vũ Minh Hiển</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE143552"></d>
+                                <td><input type="radio" value="HE143552" name="28">Present<input type="radio" value="" name="28">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -375,7 +375,7 @@
                                 <td>SE05646</td>
                                 <td>Lý Quang Minh</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE143552"></d>
+                                <td><input type="radio" value="HE143552" name="29">Present<input type="radio" value="" name="29">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
@@ -387,7 +387,7 @@
                                 <td>SE05973</td>
                                 <td>Phạm Văn Mạnh</td>
                                 <td><img src="" alt="anh sinh vien" width="150px"></td>
-                                <td><input type="checkbox" name="HE143552"></d>
+                                <td><input type="radio" value="HE143552" name="30">Present<input type="radio" value="" name="30">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
                                 <td></td>
