--- a/MyAssignment/web/view/teacher/checkattend.html
+++ b/MyAssignment/web/view/teacher/checkattend.html
@@ -14,10 +14,10 @@
                 Attendance for <b>PRJ301</b> with Lecturer <b>sonnt</b> at Slot <b>5</b> on in Room <b>DE203</b> at FU-HL
             </p>
             <div>
-                <form action="CheckAttend" style="position: relative;padding-bottom: 50px;" method="post">
-                    <table class="table"  >
+                <form action="">
+                    <table class="table" style="width: 100%;">
                         <thead>
-                            <tr>
+                            <tr style="background-color: #6b90da;">
                                 <th>NO</th>
                                 <th>GROUP</th>
                                 <th>CODE</th>
@@ -396,7 +396,7 @@
                         
                         </tbody>
                     </table>
-                    <input type="submit" value="Submit" style="text-align: right">
+                    <input type="submit" value="Submit">
                 </form>
 
             </div>
