--- a/MyAssignment/web/view/teacher/checkattend.html
+++ b/MyAssignment/web/view/teacher/checkattend.html
@@ -36,7 +36,7 @@
                                 <td>SE1645</td>
                                 <td>HE150878</td>
                                 <td>Nguyễn Đình Trường</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE150321" name="1">Present<input type="radio" value="HE150321" name="1">Absent</td>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -48,7 +48,7 @@
                                 <td>SE1645</td>
                                 <td>HE151247</td>
                                 <td>Nguyễn Ngọc Đức</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE161270" name="2">Present<input type="radio" value="" name="2">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -60,7 +60,7 @@
                                 <td>SE1645</td>
                                 <td>HE153444</td>
                                 <td>Lê Ngọc Sơn</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE163452" name="3">Present<input type="radio" value="" name="3">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -73,7 +73,7 @@
                                 <td>SE1645</td>
                                 <td>HE160919</td>
                                 <td>Nguyễn Trường Huy</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE158462" name="4">Present<input type="radio" value="" name="4">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -85,7 +85,7 @@
                                 <td>SE1645</td>
                                 <td>HE161488</td>
                                 <td>Tạ Văn Chỉnh</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE154632" name="5">Present<input type="radio" value="" name="5">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -97,7 +97,7 @@
                                 <td>SE1645</td>
                                 <td>HE161491</td>
                                 <td>Vũ Đức Phong</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE146246" name="6">Present<input type="radio" value="" name="6">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -109,7 +109,7 @@
                                 <td>SE1645</td>
                                 <td>HE161515</td>
                                 <td>Nguyễn Văn Vượng</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE158493" name="7">Present<input type="radio" value="" name="7">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -121,7 +121,7 @@
                                 <td>SE1645</td>
                                 <td>HE161578</td>
                                 <td>Phạm Đức Anh</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE153583" name="8">Present<input type="radio" value="" name="8">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -133,7 +133,7 @@
                                 <td>SE1645</td>
                                 <td>HE161586</td>
                                 <td>Vũ Xuân Trường</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE153716" name="9">Present<input type="radio" value="" name="9">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -145,7 +145,7 @@
                                 <td>SE1645</td>
                                 <td>HE161624</td>
                                 <td>Vũ Văn Hoàng</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE158493" name="10">Present<input type="radio" value="" name="10">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -157,7 +157,7 @@
                                 <td>SE1645</td>
                                 <td>HE161651</td>
                                 <td>Kiều Trí Quyền</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE158493" name="11">Present<input type="radio" value="" name="11">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -169,7 +169,7 @@
                                 <td>SE1645</td>
                                 <td>HE161657</td>
                                 <td>Lê Ngọc Tuấn Minh</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE160250" name="12">Present<input type="radio" value="" name="12">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -181,7 +181,7 @@
                                 <td>SE1645</td>
                                 <td>HE161693</td>
                                 <td>Phạm Xuân Nam</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE158493" name="13">Present<input type="radio" value="" name="13">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -193,7 +193,7 @@
                                 <td>SE1645</td>
                                 <td>HE161703</td>
                                 <td>Nguyễn Hải Đăng</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE160384" name="14">Present<input type="radio" value="" name="14">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -205,7 +205,7 @@
                                 <td>SE1645</td>
                                 <td>HE161766</td>
                                 <td>Nguyễn Tố Anh</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE160385" name="15">Present<input type="radio" value="" name="15">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -217,7 +217,7 @@
                                 <td>SE1645</td>
                                 <td>HE161786</td>
                                 <td>Tạ Văn Bách</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE151136" name="16">Present<input type="radio" value="" name="16">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -229,7 +229,7 @@
                                 <td>SE1645</td>
                                 <td>HE161864</td>
                                 <td>Đỗ Tiến Thành</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE151313" name="17">Present<input type="radio" value="" name="17">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -241,7 +241,7 @@
                                 <td>SE1645</td>
                                 <td>HE161893</td>
                                 <td>Chử Hữu Thành</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE155672" name="18">Present<input type="radio" value="" name="18">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -253,7 +253,7 @@
                                 <td>SE1645</td>
                                 <td>HE161925</td>
                                 <td>Trần Đình Lực</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE142342" name="19">Present<input type="radio" value="" name="19">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -265,7 +265,7 @@
                                 <td>SE1645</td>
                                 <td>HE163314</td>
                                 <td>Phạm Anh Thương</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE143232" name="20">Present<input type="radio" value="" name="20">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -277,7 +277,7 @@
                                 <td>SE1645</td>
                                 <td>HE163672</td>
                                 <td>Nguyễn Thị Hải Nhi</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE150138" name="21">Present<input type="radio" value="" name="21">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -289,7 +289,7 @@
                                 <td>SE1645</td>
                                 <td>HE163676</td>
                                 <td>Lê Trung Anh</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE150224" name="22">Present<input type="radio" value="" name="22">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -301,7 +301,7 @@
                                 <td>SE1645</td>
                                 <td>HE163810</td>
                                 <td>Lê Trần Tiến Đông</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE150333" name="23">Present<input type="radio" value="" name="23">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -313,7 +313,7 @@
                                 <td>SE1645</td>
                                 <td>HE163825</td>
                                 <td>Nguyễn Tiến Quân</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE150375" name="24">Present<input type="radio" value="" name="24">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -325,7 +325,7 @@
                                 <td>SE1645</td>
                                 <td>HE163825</td>
                                 <td>Phạm Công Chí</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE143552" name="25">Present<input type="radio" value="" name="25">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -337,7 +337,7 @@
                                 <td>SE1645</td>
                                 <td>HE163830</td>
                                 <td>Cao Thế Trung</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE143552" name="26">Present<input type="radio" value="" name="26">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -349,7 +349,7 @@
                                 <td>SE1645</td>
                                 <td>HE163940</td>
                                 <td>Đỗ Duy Mạnh</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE143552" name="27">Present<input type="radio" value="" name="27">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -362,7 +362,7 @@
                                 <td>SE1645</td>
                                 <td>HE163953</td>
                                 <td>Vũ Minh Hiển</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE143552" name="28">Present<input type="radio" value="" name="28">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -374,7 +374,7 @@
                                 <td>SE1645</td>
                                 <td>SE05646</td>
                                 <td>Lý Quang Minh</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE143552" name="29">Present<input type="radio" value="" name="29">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
@@ -386,7 +386,7 @@
                                 <td>SE1645</td>
                                 <td>SE05973</td>
                                 <td>Phạm Văn Mạnh</td>
-                                <td><img src="" alt="anh sinh vien" width="150px"></td>
+                                <td><img src="" alt="anh sinh vien"></td>
                                 <td><input type="radio" value="HE143552" name="30">Present<input type="radio" value="" name="30">Absent</d>
                                 <td></td>
                                 <td>sonnt</td>    
