--- a/MyAssignment/web/css/attendancereport.css
+++ b/MyAssignment/web/css/attendancereport.css
@@ -1,11 +1,3 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : Oct 30, 2022, 12:44:46 AM
-    Author     : HP
-*/
 
 body{
 	display: flex;
@@ -17,11 +9,11 @@ header{
 	display: flex;
 	justify-content: space-between;
 	background-color: orange;
-	
+	width: 100%;
 }
 
 header nav{
-	margin-top: 40px;
+	margin: 40px 0px 0px 50px;
 }
 
 header h1{
@@ -34,8 +26,6 @@ header img{
 	float: right;
 	width: 10%;
 }
-
-
 
 table{
 	margin-top: 20px;
@@ -53,7 +43,7 @@ td{
 
 th{
 	border: thin black;
-	background-color: deepskyblue;
+	background-color: #6b90da;
 	border-radius: 5px;
 }
 
@@ -76,9 +66,3 @@ td.present{
 td.absent{
     color: red;
 }
-
-
-/*tr :hover {
-	background-color: darkgrey;
-	font-weight: bold;
-}*/
