--- a/MyAssignment/web/css/timetable.css
+++ b/MyAssignment/web/css/timetable.css
@@ -1,22 +1,3 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : Oct 29, 2022, 8:42:44 PM
-    Author     : HP
-*/
-
-td{
-	border: thin black;
-	background-color: lightgrey;
-}
-
-th{
-	border: thin black;
-	background-color: skyblue;
-}
-
 
 body{
 	display: flex;
@@ -28,11 +9,11 @@ header{
 	display: flex;
 	justify-content: space-between;
 	background-color: orange;
-	
+	width: 100%;
 }
 
 header nav{
-	margin-top: 40px;
+	margin: 40px 0px 0px 50px;
 }
 
 header h1{
@@ -45,10 +26,6 @@ header img{
 	float: right;
 	width: 10%;
 }
-
-/*tr :hover{
-	background-color: darkgrey;
-}*/
 
 abbr.attended{
 	text-decoration: none;
@@ -72,4 +49,14 @@ abbr.attendance{
     text-decoration: none;
     background-color: #33ffcc;
     border-radius: 5px;
+}
+
+td{
+	border: thin black;
+        background-color: aliceblue;
+}
+
+th{
+	border: thin black;
+        background-color: #6b90da;
 }
